<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.EarphoneOnOffActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/_4sdp"
        android:layout_above="@id/bannerLayout"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/speakerLine1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="@+id/speakerSwitch"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/speakerSwitch"
                app:layout_constraintTop_toTopOf="@+id/speakerSwitch" />

            <View
                android:id="@+id/earphoneLine2"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toEndOf="@+id/earphoneSwitch"
                app:layout_constraintTop_toBottomOf="@+id/earphoneSwitch" />

            <View
                android:id="@+id/earphoneLine"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/earphoneLine2"
                app:layout_constraintStart_toEndOf="@+id/earphoneLine1"
                app:layout_constraintTop_toBottomOf="@+id/earphoneSwitch" />

            <View
                android:id="@+id/speakerLine2"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="@color/purple_500"
                app:layout_constraintStart_toStartOf="@+id/speakerSwitch"
                app:layout_constraintTop_toBottomOf="@+id/speakerSwitch" />

            <View
                android:id="@+id/speakerLine"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_90sdp"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@+id/speakerLine1"
                app:layout_constraintStart_toStartOf="@+id/speakerLine2"
                app:layout_constraintTop_toBottomOf="@+id/speakerSwitch" />

            <View
                android:id="@+id/earphoneLine1"
                android:layout_width="0dp"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/earphoneSwitch"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="-110dp"
                android:src="@drawable/chip_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="-40dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/earphoneSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24sdp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/speakerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:background="@android:color/transparent"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/speakerImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-5dp"
                android:background="@drawable/red_circle"
                android:src="@drawable/ic_sound"
                android:padding="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@+id/speakerLine"
                app:layout_constraintStart_toStartOf="@+id/speakerLine2"
                app:layout_constraintTop_toBottomOf="@+id/speakerLine2" />

            <ImageView
                android:id="@+id/headphoneImg"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="-5dp"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_headphone"
                android:background="@drawable/green_circle"
                app:layout_constraintEnd_toEndOf="@+id/earphoneLine2"
                app:layout_constraintStart_toStartOf="@+id/earphoneLine"
                app:layout_constraintTop_toBottomOf="@+id/earphoneLine2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/method_1"
                android:textSize="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toStartOf="@+id/headphoneImg"
                app:layout_constraintStart_toEndOf="@+id/speakerImg"
                app:layout_constraintTop_toBottomOf="@+id/headphoneImg" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/textview_bg"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/note_this_method_is_route_the_audio_to_speaker_or_earphone_nuse_on_off_switch_for_routing_audio"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/headphoneImg"
                app:layout_constraintStart_toStartOf="@+id/speakerImg"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clickToChangeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:backgroundTint="@color/color_round_btn_bg"
                android:padding="@dimen/_10sdp"
                android:text="@string/click_to_change"
                android:textSize="@dimen/_12sdp"
                app:cornerRadius="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/method_2"
                android:textSize="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/clickToChangeBtn"
                app:layout_constraintStart_toStartOf="@+id/clickToChangeBtn"
                app:layout_constraintTop_toBottomOf="@+id/clickToChangeBtn" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/textview_bg"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/note_this_method_to_change_system_setting_to_speaker_mode"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/headphoneImg"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/speakerImg"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <LinearLayout
                android:id="@+id/btnLL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/testBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/test"
                    android:textSize="@dimen/_14sdp"
                    android:backgroundTint="@color/color_round_btn_bg"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_15sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dialerBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/dialer"
                    android:textSize="@dimen/_14sdp"
                    android:backgroundTint="@color/color_round_btn_bg"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/_15sdp"
                    app:layout_constraintStart_toEndOf="@+id/testBtn"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resetBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/reset"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14sdp"
                    android:backgroundTint="@color/color_round_btn_bg"
                    app:cornerRadius="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/dialerBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/dialerBtn"
                    app:layout_constraintTop_toTopOf="@+id/dialerBtn" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/textview_bg"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/click_test_button_to_test_sound"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/btnLL"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btnLL"
                app:layout_constraintTop_toBottomOf="@+id/btnLL" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/bannerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical" />

</RelativeLayout>